apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void uniffi_ant_ffi_fn_free_archiveaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_archiveaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_archiveaddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_dataaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_dataaddress_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_datamapchunk(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_datamapchunk_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_datamapchunk_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_datamapchunk_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_metadata(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_metadata_new(uint64_t size, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_metadata_with_timestamps(uint64_t size, uint64_t created, uint64_t modified, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_metadata_created(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_metadata_modified(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_metadata_size(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_networkpointer_new(void*_Nonnull key, uint64_t counter, void*_Nonnull target, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_networkpointer_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_networkpointer_counter(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_networkpointer_target(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_pointeraddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_pointeraddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_pointeraddress_new(void*_Nonnull public_key, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_pointeraddress_owner(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_pointeraddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_pointertarget(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_pointertarget_chunk(void*_Nonnull addr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_pointertarget_graph_entry(void*_Nonnull addr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_pointertarget_pointer(void*_Nonnull addr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_pointertarget_scratchpad(void*_Nonnull addr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_pointertarget_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_privatearchive(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_privatearchive_new(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_ant_ffi_fn_method_privatearchive_add_file(void*_Nonnull ptr, RustBuffer path, void*_Nonnull data_map, void*_Nonnull metadata, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_privatearchive_data_maps(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_privatearchive_file_count(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_privatearchive_files(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_privatearchive_rename_file(void*_Nonnull ptr, RustBuffer old_path, RustBuffer new_path, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_privatearchivedatamap(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_privatearchivedatamap_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_privatearchivedatamap_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_publicarchive(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_publicarchive_new(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_ant_ffi_fn_method_publicarchive_add_file(void*_Nonnull ptr, RustBuffer path, void*_Nonnull address, void*_Nonnull metadata, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_publicarchive_addresses(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_publicarchive_file_count(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_publicarchive_files(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_publicarchive_rename_file(void*_Nonnull ptr, RustBuffer old_path, RustBuffer new_path, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_func_chunk_max_raw_size(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_ant_ffi_fn_func_chunk_max_size(RustCallStatus *_Nonnull out_status
    
);