csharp/AntFfi/Native/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_dataaddress_to_bytes")]
    public static extern void DataAddressToBytes(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_dataaddress")]
    public static extern void FreeDataAddress(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Data - DataMapChunk

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_datamapchunk_from_hex")]
    public static extern IntPtr DataMapChunkFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_datamapchunk_to_hex")]
    public static extern void DataMapChunkToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_datamapchunk_address")]
    public static extern void DataMapChunkAddress(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_datamapchunk")]
    public static extern void FreeDataMapChunk(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Data - Constants

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_func_chunk_max_size")]
    public static extern ulong ChunkMaxSize(ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_func_chunk_max_raw_size")]
    public static extern ulong ChunkMaxRawSize(ref RustCallStatus status);

    #endregion

    #region Archive - Metadata

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_metadata_new")]
    public static extern IntPtr MetadataNew(ulong size, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_metadata_with_timestamps")]
    public static extern IntPtr MetadataWithTimestamps(ulong size, ulong created, ulong modified, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_metadata_size")]
    public static extern ulong MetadataSize(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_metadata_created")]
    public static extern ulong MetadataCreated(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_metadata_modified")]
    public static extern ulong MetadataModified(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_metadata")]
    public static extern void FreeMetadata(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Archive - ArchiveAddress

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_archiveaddress_from_hex")]
    public static extern IntPtr ArchiveAddressFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_archiveaddress_to_hex")]
    public static extern void ArchiveAddressToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_archiveaddress")]
    public static extern void FreeArchiveAddress(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Archive - PrivateArchiveDataMap

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_privatearchivedatamap_from_hex")]
    public static extern IntPtr PrivateArchiveDataMapFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_privatearchivedatamap_to_hex")]
    public static extern void PrivateArchiveDataMapToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_privatearchivedatamap")]
    public static extern void FreePrivateArchiveDataMap(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Archive - PublicArchive

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_publicarchive_new")]
    public static extern IntPtr PublicArchiveNew(ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_publicarchive_add_file")]
    public static extern IntPtr PublicArchiveAddFile(IntPtr ptr, RustBuffer path, IntPtr address, IntPtr metadata, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_publicarchive_rename_file")]
    public static extern IntPtr PublicArchiveRenameFile(IntPtr ptr, RustBuffer oldPath, RustBuffer newPath, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_publicarchive_files")]
    public static extern void PublicArchiveFiles(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_publicarchive_file_count")]
    public static extern ulong PublicArchiveFileCount(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_publicarchive_addresses")]
    public static extern void PublicArchiveAddresses(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_publicarchive")]
    public static extern void FreePublicArchive(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Archive - PrivateArchive

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_privatearchive_new")]
    public static extern IntPtr PrivateArchiveNew(ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_privatearchive_add_file")]
    public static extern IntPtr PrivateArchiveAddFile(IntPtr ptr, RustBuffer path, IntPtr dataMap, IntPtr metadata, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_privatearchive_rename_file")]
    public static extern IntPtr PrivateArchiveRenameFile(IntPtr ptr, RustBuffer oldPath, RustBuffer newPath, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_privatearchive_files")]
    public static extern void PrivateArchiveFiles(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_privatearchive_file_count")]
    public static extern ulong PrivateArchiveFileCount(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_privatearchive_data_maps")]
    public static extern void PrivateArchiveDataMaps(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_privatearchive")]
    public static extern void FreePrivateArchive(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Pointer - PointerAddress

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_pointeraddress_new")]
    public static extern IntPtr PointerAddressNew(IntPtr publicKey, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_pointeraddress_from_hex")]
    public static extern IntPtr PointerAddressFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_pointeraddress_owner")]
    public static extern IntPtr PointerAddressOwner(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_pointeraddress_to_hex")]
    public static extern void PointerAddressToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_pointeraddress")]
    public static extern void FreePointerAddress(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Pointer - PointerTarget

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_pointertarget_chunk")]
    public static extern IntPtr PointerTargetChunk(IntPtr addr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_pointertarget_pointer")]
    public static extern IntPtr PointerTargetPointer(IntPtr addr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_pointertarget_graph_entry")]
    public static extern IntPtr PointerTargetGraphEntry(IntPtr addr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_pointertarget_scratchpad")]
    public static extern IntPtr PointerTargetScratchpad(IntPtr addr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_pointertarget_to_hex")]
    public static extern void PointerTargetToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_pointertarget")]
    public static extern void FreePointerTarget(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Pointer - NetworkPointer

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_networkpointer_new")]
    public static extern IntPtr NetworkPointerNew(IntPtr key, ulong counter, IntPtr target, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_networkpointer_address")]
    public static extern IntPtr NetworkPointerAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_networkpointer_target")]
    public static extern IntPtr NetworkPointerTarget(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_networkpointer_counter")]
    public static extern ulong NetworkPointerCounter(IntPtr ptr, ref RustCallStatus status);
